client/src/App.css
.content-div {
    padding: 5px;
    margin: 0 auto 0 auto;
    display: flex;
    justify-content: center;
}

.form-div {
    width: 250px;
    height: calc(100vh - 70px);
    margin: 0 5px 0 0;
}

.header-div {
    width: 100%;
    height: 40px;
    margin: 0 0 5px 0;
    padding: 0;
    border: 1px solid red;
}

.header-div > div {
    max-width: 100%;
    margin: 12px 0 0 0;
    text-align: center;
    border: 1px solid blue;
    /* border-bottom: 2px solid black; */
}

.character-form-div {
    margin: 0 0 5px 0;
}

.characters-table {
    width: 100%;
}

.characters-table * {
    text-align: center;
}

.table-head {
    height: 51px;
    border-bottom: 0px;
    margin-bottom: 0;
}

.characters-table-wrapper-scroll-y {
    height: calc(100% - 141px);
    margin: 0;
    overflow-y: auto;
}

.form-input {
    height: 40px;
    width: 100%;
    margin: 0 0 5px 0;
}

.form-btn-wrapper {
    display: flex;
    justify-content: space-between;
}

.form-btn {
    height: 40px;
    width: calc(50% - 2.5px);
    margin: 0 0 0 0;
    text-align: center;
}

.connections-table {
    width: 100%;
}

.connections-table * {
    text-align: center;
}

.connections-table-wrapper-scroll-y {
    height: calc(100% - 186px);
    margin: 0;
    overflow-y: auto;
}

